# oxide-os

./: CHANGELOG.md  README.md  TODO.md
.github/workflows/: build.yml
.netlify/: netlify.toml
docs/: ARTICLE.md  YC-SUMMARY.md
docs/superpowers/plans/: 2026-05-02-phase1-kernel-boot-foundation.md  2026-05-02-phase10-inference-dashboard.md  2026-05-02-phase2-scheduler-interrupts.md  (+8 more)
landing/: index.html
oxide-os/: .gitignore  Cargo.toml  LICENSE  Makefile  limine.conf
oxide-os/.cargo/: config.toml
oxide-os/kernel/: Cargo.toml  linker.ld
oxide-os/kernel/src/: allocator.rs  apic.rs  gdt.rs  interrupts.rs  main.rs  qemu.rs  serial.rs
oxide-os/kernel/src/agent/: lifecycle.rs  mod.rs  registry.rs  supervisor.rs
oxide-os/kernel/src/capability/: mod.rs  permissions.rs  resource.rs  table.rs
oxide-os/kernel/src/crypto/: hmac_cap.rs  mod.rs  rng.rs  signing.rs
oxide-os/kernel/src/gpu/: mod.rs  scheduler.rs
oxide-os/kernel/src/ipc/: channel.rs  message.rs  mod.rs  request_reply.rs  shared_memory.rs
oxide-os/kernel/src/memory/: frame_allocator.rs  mod.rs  paging.rs
oxide-os/kernel/src/net/: dns.rs  firewall.rs  http.rs  mod.rs  socket.rs  stack.rs  tls.rs  virtio_net.rs
oxide-os/kernel/src/pci/: mod.rs
oxide-os/kernel/src/storage/: block_cache.rs  context_store.rs  mod.rs  oxide_fs.rs  virtio_blk.rs
oxide-os/kernel/src/syscall/: handler.rs  mod.rs  numbers.rs
oxide-os/kernel/src/task/: context.rs  mod.rs  scheduler.rs
oxide-os/kernel/src/timer/: clock.rs  deadline.rs  mod.rs
oxide-os/kernel/src/userspace/: elf.rs  mod.rs  process.rs
(+1 files in other folders)
