[package]
name = "oxide-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = "0.6"
spin = "0.9"
x86_64 = "0.15"
uart_16550 = "0.3"
linked_list_allocator = "0.10"
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet", "proto-ipv4",
    "socket-tcp", "socket-udp", "socket-dns",
    "alloc"
] }
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
hmac = { version = "0.12", default-features = false }
